small update on appointment and feedbacl
